# tapestry-skills-for-claude-code

./: .gitignore  README.md  install.sh  plugin.json  pyproject.toml
article-extractor/: SKILL.md
shared/references/: security-guidelines.md
shared/scripts/: safe-download.sh  safe-temp.sh  sanitize-filename.sh  validate-url.sh
ship-learn-next/: SKILL.md
skills/article-extractor/: SKILL.md
skills/tapestry/: SKILL.md
src/tapestry/: __init__.py  html_extractor.py  safe_download.py  sanitize_filename.py  validate_url.py  vtt_to_text.py
tapestry/: SKILL.md
tests/: conftest.py
tests/fixtures/: sample.html  sample.vtt  sample_clean.html.txt  sample_clean.txt
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_html_extractor.py  test_safe_download.py  test_sanitize_filename.py  test_validate_url.py  test_vtt_to_text.py
youtube-transcript/: SKILL.md
