[project]
name = "tapestry-skills"
version = "1.0.0"
description = "Content extraction and action planning skills for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0,<2026",
    "trafilatura>=1.8.0,<2.0",
]

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]

[project.scripts]
tapestry-validate-url = "tapestry.validate_url:main"
tapestry-sanitize-filename = "tapestry.sanitize_filename:main"
tapestry-safe-download = "tapestry.safe_download:main"
tapestry-vtt-to-text = "tapestry.vtt_to_text:main"
tapestry-extract-html = "tapestry.html_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapestry"]
